# EgoVault

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  ego.cmd  ego.ps1  ego.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: how-it-works.md  installation.md
egovault/: __main__.py  bootstrap.py  cli.py  config.py
egovault/adapters/: __init__.py  gmail.py  gmail_api.py  gmail_imap_adapter.py  local_inbox.py  telegram_export.py  telegram_history.py
egovault/agent/: __init__.py  commands.py  executor.py  intent.py  session.py  tools.py
egovault/chat/: rag.py  session.py  streamlit_app.py  telegram_bot.py  web.py
egovault/core/: adapter.py  enrichment.py  registry.py  schema.py  store.py
egovault/frontends/: __init__.py  mcp.py  telegram.py  tui.py  web.py
egovault/output/: markdown.py
egovault/processing/: __init__.py  rag.py
egovault/utils/: audit.py  chunking.py  encoding.py  folders.py  gmail_auth.py  gmail_imap.py  hashing.py  llm.py  llm_errors.py  memory_processors.py  scheduler.py  telegram_api.py  updater.py
hf_space/: Dockerfile  README.md  app.py  requirements.txt
scripts/: install-win.ps1  install.sh
tests/: test_chat_rag.py  test_chunking.py  test_config.py  test_enrichment.py  test_gmail_adapter.py  test_gmail_api_adapter.py  test_gmail_imap.py  test_hashing_chunking.py  test_llm_errors.py  test_local_inbox_adapter.py  test_memory_processors.py  test_scan_features.py  test_store.py  test_write_file_paths.py
tests/fixtures/gmail/: test_export.mbox
tests/fixtures/local_inbox/: meeting_notes.md  reading_list.txt  saved_article.html
